# zapuskalka

./: .editorconfig  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yml  av.Dockerfile  export_presets.cfg  icon.svg.import  launcher_readme.md  launcher_readme_new_ui.md  package.json  project.godot  typegen-watcher.ts
apps/launcher-rust/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher-rust/src-tauri/capabilities/: desktop.json
apps/launcher-rust/src-tauri/icons/: icon.icns
apps/launcher-rust/src-tauri/src/: lib.rs  main.rs  models.rs  process_monitor.rs  states.rs  tracking_reader.rs
backend/: .gitignore  go.mod  go.sum  index.html  main.go  migrate-dev.go  migrate-prod.go  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: ARCHITECTURE.md  PRODUCT.md  bpmn-list.md  bpmn-template.md
frontend/: .env.example  eslint.config.ts  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
images/: background.png.import  news_1.jpg.import  news_2.jpg.import  news_4.png.import
launcher/: app.go  go.mod  main.go  wails.json  wails.schema.json
launcher-rust/: .gitignore  eslint.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
scenes/: Launcher.tscn  LauncherNative.tscn  LauncherTheme.tres  MainFrame.tscn  MainLauncher.tscn  Settings.tscn  launcher_theme.tres
scripts/: NewsParser.gd  NewsParser.gd.uid  ServerMonitor.gd  ServerMonitor.gd.uid  ServerStatusIndicator.gd  ServerStatusIndicator.gd.uid  bump-version.ts  buttons_switch_tabs.gd  buttons_switch_tabs.gd.uid  github_api.gd  github_api.gd.uid  launcher.gd  utils.gd  (+20 more)
(+261 files in other folders)
