[package]
name = "Zapuskalka"
version = "0.4.2"
description = "Launcher for indie apps and games."
authors = ["Milan Rodd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zapuskalka_launcher_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "ci/release-v2" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tar = "0.4.44"
flate2 = "1.1.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-process = "2"
os_info = "3"
tauri-plugin-deep-link = "2"
sentry = "0.42"
tauri-plugin-sentry = "0.5"
futures-core = "0.3.31"
tokio-util = "0.7.17"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-updater = "2"
